=head1 Upgrading from 2.4 to 2.5

The following upgrade process is still under construction and not complete.

=over 2

=item *

The syntax of the B<innreport> configuration file has slightly changed.
The new F<innreport.conf> file should be used and your possible changes
backported to this new version.

=item *

The parameters used by B<nnrpd> to provide TLS support are now I<tlscafile>,
I<tlscapath>, I<tlscertfile> and I<tlskeyfile> in F<inn.conf>.  The F<sasl.conf>
file used for that in previous versions of INN is obsolete.  B<innupgrade>
takes care of the change during C<make update>.

=item *

The I<nntpactsync> parameter has been renamed to I<incominglogfrequency>
in F<inn.conf>; B<innupgrade> handles this renaming during the update.

=item *

The $SPOOLBASE variable has been renamed to $SPOOLDIR in B<innshellvars>
in order to be more consistent.  It impacts shell scripts only.  If you
import B<innshellvars> and use that variable in your scripts, you will have
to rename it.

=back

=head1 Changes in 2.5.0

=over 2

=item *

Ken Murchison has contributed SASL authentication support for B<nnrpd>,
implementing the current Internet Draft specification.

=item *

B<inndstart> and B<startinnfeed> are no longer part of INN and are no
longer used.  Instead, a separate setuid root helper program is used to
bind to the news ports (and does only that), and is run by B<innd> and
B<nnrpd> when necessary.

This means that INN may not be able to increase file descriptor limits for
itself the way that it could before.  If you get error messages about
resetting the file descriptor limits, you may need to increase the file
descriptor limits as root before running B<rc.news> as the news user.  See
the sample init script in F<contrib> for an example of how to do this.  More
information on file descriptor limits can be found in F<INSTALL>.

In F<newsfeeds>, B<innfeed> should be run directly rather than through
B<startinnfeed>.  B<innupgrade> will attempt to take care of this