@@ -19,8 +19,12 @@ use strict;
 
 sub control_rmgroup {
     my ($par, $sender, $replyto, $site, $action, $log, $approved,
-        $headers, $body) = @_;
+        $article) = @_;
     my ($groupname) = @$par;
+
+    my $head = $article->head;
+    my @headers = split(/\r?\n/, $head->stringify);
+    my @body = split(/\r?\n/, $article->stringify_body);
 
     # Scan active to see what sort of change we are making.
     open(ACTIVE, $INN::Config::active) or logdie("Cannot open $INN::Config::active: $!");
@@ -55,14 +59,14 @@ from your $INN::Config::pathdb/newsgroups file.
 The control message follows:
 
 END
-        print $mail map { s/^~/~~/; "$_\n" } @$headers;
+        print $mail map { s/^~/~~/; "$_\n" } @headers;
         print $mail "\n";
-        print $mail map { s/^~/~~/; "$_\n" } @$body;
+        print $mail map { s/^~/~~/; "$_\n" } @body;
         close $mail or logdie("Cannot send mail: $!");
     } elsif ($action eq 'log') {
         if ($log) {
             logger($log, "skipping rmgroup $groupname"
-                . " $sender (would be $status)", $headers, $body);
+                . " $sender (would be $status)", $article);
         } else {
             logmsg("skipping rmgroup $groupname $sender (would be $status)");
         }
@@ -84,7 +88,7 @@ END
         unlink "$INN::Config::locks/LOCK.newsgroups";
         unlink $tempfile;
 
-        logger($log, "rmgroup $groupname $status $sender", $headers, $body)
+        logger($log, "rmgroup $groupname $status $sender", $article)
             if $log;
     }
 }
