@@ -19,8 +19,12 @@ use strict;
 
 sub control_sendsys {
     my ($par, $sender, $replyto, $site, $action, $log, $approved,
-        $headers, $body) = @_;
+        $article) = @_;
     my ($where) = @$par;
+
+    my $head = $article->head;
+    my @headers = split(/\r?\n/, $head->stringify);
+    my @body = split(/\r?\n/, $article->stringify_body);
 
     if ($action eq 'mail') {
         my $mail = sendmail("sendsys $sender");
@@ -34,13 +38,13 @@ If this is acceptable, type:
 The control message follows:
 
 END
-        print $mail map { s/^~/~~/; "$_\n" } @$headers;
+        print $mail map { s/^~/~~/; "$_\n" } @headers;
         print $mail "\n";
-        print $mail map { s/^~/~~/; "$_\n" } @$body;
+        print $mail map { s/^~/~~/; "$_\n" } @body;
         close $mail or logdie("Cannot send mail: $!");
     } elsif ($action eq 'log') {
         if ($log) {
-            logger($log, "sendsys $sender", $headers, $body);
+            logger($log, "sendsys $sender", $article);
         } else {
             logmsg("sendsys $sender");
         }
@@ -57,7 +61,7 @@ END
         close NEWSFEEDS;
         close $mail or logdie("Cannot send mail: $!");
 
-        logger($log, "sendsys $sender to $replyto", $headers, $body) if $log;
+        logger($log, "sendsys $sender to $replyto", $article) if $log;
     }
 }
 
